# session-recorder

./: .gitignore  README.ja.md  README.md  pyproject.toml
docs/en/: format.md
docs/ja/: format.md
src/session_recorder/: __init__.py  format.py  reader.py  sink.py
tests/: conftest.py  test_format.py  test_okl_conformance.py  test_phase_markers.py  test_reader.py  test_sink.py
