[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-recorder"
version = "0.0.0"
description = "OKL v1 (OperantKitLog v1) writer/reader for OperantKit session events. Implements the wire format specified in OperantKitLog/spec/."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "operantkit contributors" }]
dependencies = [
    "experiment-core",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["src/session_recorder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "unit: unit-level tests",
    "integration: integration-level tests spanning modules",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
